# Compu

./: README.md  matriz.py  prueba_matriz.c
Cohete/: .sh  Cohete.cpp  Energia.txt  Momentos.txt  Posiciones.txt  animacion.py  energia.py
Ising-Kawasaki/ising-kawasaki-lib/: CMakeLists.txt
Lennard_Jones/: .gitignore  Datos_paralelizacion.csv  Datos_presion.txt  Lennard-Jones.ipynb  Lennard_Jones_separado.cpp  Parametros.txt
Lennard_Jones/Analisis/: analisis presion.py  analisis separacion.py  analisis varPosicion.py  analisis velocidades.py  (+11 more)
Lennard_Jones/Simulacion/lennard-jones-lib/: CMakeLists.txt
Lennard_Jones/Simulacion/lennard-jones-lib/include/: Archivo.h  Particula.h  Simulador.h
Lennard_Jones/Simulacion/lennard-jones-lib/src/: Archivo.cpp  Particula.cpp  Simulador.cpp
Prueba matriz/: matriz.py  prueba_matriz.c
Schrodinger/: .sh  Norma.txt  Paralelizacion.txt  Schrodinger.cpp  Schrodinger.ipynb  V.txt  analisis_resultados.py  animacion_norma.py  animacion_schrodinger.py  datos.txt  paralelizacion.py  results.json  results.md
Sistema_solar/: Posiciones.c  chatGPT.c  cuerpo_1.txt  cuerpo_2.txt  cuerpo_3.txt  cuerpo_4.txt  cuerpo_5.txt  cuerpo_6.txt  cuerpo_7.txt  cuerpo_8.txt  cuerpo_9.txt  datos.txt  funciones.c  funciones.h  graficar_orbitas.py  planet_1.txt  planet_2.txt  planet_3.txt  planet_4.txt  planet_5.txt  planet_6.txt  planet_7.txt  planet_8.txt  representacion.py
Sistema_solar_C/: Posiciones.c  funciones.c  funciones.h  representacion.ipynb  representacion.py
Voluntario_1/: Lennard_Jones_separado.cpp  animacion.py  ejecucion.sh
(+49 files in other folders)
